Trying to fix the 100vh issue on mobile.

--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
 
+    min-height: -webkit-fill-availble;
     // @media(max-width: 900px) {
     //   padding: 5rem 0;
     // }
